--- a/ref.bib
+++ b/ref.bib
@@ -354,3 +354,30 @@ MRREVIEWER = {J. F. Adams},
 
 
 
+@article{Witten:1995gf,
+    author = "Witten, Edward",
+    title = "{On S Duality in Abelian Gauge Theory}",
+    eprint = "hep-th/9505186",
+    archivePrefix = "arXiv",
+    reportNumber = "IASSNS-HEP-95-36",
+    doi = "10.1007/BF01671570",
+    journal = "Selecta Math.",
+    volume = "1",
+    pages = "383",
+    year = "1995"
+}
+
+
+
+@article{Cordova:2018acb,
+    author = "C\'ordova, Clay and Dumitrescu, Thomas T.",
+    title = "{Candidate Phases for SU(2) Adjoint QCD$_4$ with Two Flavors from $\mathcal{N}=2$ Supersymmetric Yang-Mills Theory}",
+    eprint = "1806.09592",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "6",
+    year = "2018"
+}
+
+
+
