Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -147,7 +147,7 @@
 \begin{center}
 
 {\Large \bfseries Matching higher symmetries \\[1em]
-across Intiligator-Seiberg duality}
+across Intriligator-Seiberg duality}
 
 \vskip 1cm
 Yasunori Lee$^1$, Kantaro Ohmori$^2$, and Yuji Tachikawa$^1$
